concord_examples/tests/ui/duplicate_var_conflict.stderr
error: var `id` redefined with different type
 --> tests/ui/duplicate_var_conflict.rs:9:20
  |
9 |     GET A(id: u32, id: String)
  |                    ^^
